# snbmodules

./: .gitignore  CMakeLists.txt  Doxyfile
apps/: snb_file_transfer_app.cxx
cmake/: snbmodulesConfig.cmake.in
docs/: Configuration.md  Installation.md  IntegrationTests.md  README.md  TechnicalDocumentation.md  Transfer.md
include/snbmodules/: bookkeeper.hpp  group_metadata.hpp  iomanager_wrapper.hpp  ip_format.hpp  metadata_abstract.hpp  notification_interface.hpp  transfer_client.hpp  transfer_metadata.hpp  transfer_session.hpp
include/snbmodules/common/: errors_declaration.hpp  notification_enum.hpp  protocols_enum.hpp  status_enum.hpp
include/snbmodules/interfaces/: transfer_interface_RClone.hpp  transfer_interface_SCP.hpp  transfer_interface_abstract.hpp  transfer_interface_bittorrent.hpp
include/snbmodules/tools/: magic_enum.hpp  natural_sort.hpp
integtest/: README.md  new-RClone-transfer.json  new-torrent-transfer.json  record-cmd.json  snb_1node_1app_rclone_http_system_quick_test.py  snb_1node_1app_system_quick_test.py  snb_1node_1app_torrent_system_quick_test.py  snb_1node_multiapp_system_quick_test.py  snb_1node_multiclientapps_rclone_http_system_quick_test.py  snb_1node_system_quick_test.py  snb_minimal_system_quick_test.py  snb_minimal_system_test.py  start-torrent-transfer.json  start-transfer.json  transfer_check.py
plugins/: SNBFileTransfer.cpp  SNBFileTransfer.hpp  SNBTransferBookkeeper.cpp  SNBTransferBookkeeper.hpp
pybindsrc/: module.cpp  pythonbindingsrenameme.cpp  registrators.hpp
python/snbmodules/: __init__.py  raw_file_check.py  snbmodules_gen.py  snbmodulesapp_gen.py  transfer_check.py
schema/snbmodules/: confgen.jsonnet  snbfiletransfer.jsonnet  snbmodulesgen.jsonnet  snbtransferbookkeeper.jsonnet  snbtransferbookkeeperinfo.jsonnette
scripts/: snbmodules_example_config.json  snbmodules_gen  snbmodules_multiru_multisnb_gen
snbconfig/: boot.json  conf.json  daqconf_multiru_gen.info  hwmap.json  init.json  snbmodules_gen.info
snbconfig/commands/: bk-info.json  cancel-transfer.json  command_generator.sh  generated_new-transfer_client0_transfer0.json  generated_new_transfer_client0_transfer0.json  generated_start_transfer_client0_transfer0.json  new-RClone-transfer.json  new-bittorrent-transfer-multi.json  new-bittorrent-transfer.json  new-scp-transfer.json  pause-transfer.json  resume-transfer.json  start-transfer.json  start-transfer1.json  start-transfer2.json
snbconfig/config/: daqconf.json
snbconfig/data/: snbbookkeeper_conf.json  snbbookkeeper_init.json  snbclient0_conf.json  snbclient0_init.json  snbclient1_conf.json  snbclient1_init.json  snbclient2_conf.json  snbclient2_init.json  snbmodules0_conf.json  snbmodules0_init.json  snbmodules1_conf.json  snbmodules1_init.json
src/bookkeeper/: bookkeeper.cpp
src/client/: transfer_client.cpp  transfer_session.cpp
src/common/: group_metadata.cpp  iomanager_wrapper.cpp  notification_interface.cpp  transfer_interface_bittorrent.cpp  transfer_metadata.cpp
test/apps/: snb_bittorent_full_test.cxx  snb_bittorrent_full_test.cxx  snb_bookkeeper_app.cxx  snb_client_available_test.cxx  snb_client_test.cxx  snb_group_metadata_save_load.cxx  snb_ip_format_test.cxx  snb_notification_test.cxx  snb_rclone_full_test.cxx  snb_session_test.cxx  snb_transfer_client_app.cxx  snb_transfer_metadata_save_load.cxx
tools/: bittorent_generate_stats_report.sh
tools/util/: parse_session_stats.py
